--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -236,7 +236,7 @@ header {
           vertical-align: middle;
           margin-left: 10px;
           position: relative;
-          &>a{
+          & > a {
             line-height: normal;
           }
           &:nth-child(-n + 4) {
@@ -415,6 +415,10 @@ header {
           border-radius: 50%;
           background-color: $primary_color;
           &:first-child {
+            @include Flexible($a-items: center);
+            img{
+              height: 18px;
+            }
             @media (min-width: 992px) {
               display: none;
             }
@@ -422,17 +426,23 @@ header {
           &:not(:last-child) {
             margin-right: 10px;
           }
-          &.message {
-            padding: 13.2px 4px 13.5px 4px;
-          }
           &.internet-bank {
-            padding: 14px 5px 14px 6px;
             transition: none;
             line-height: normal;
+            overflow: hidden;
+            position: relative;
+            @include Flexible($a-items: center);
             span {
-              transition: none;
-              display: none;
+              opacity: 0;
+              visibility: visible;
+              display: inline-block;
               color: #000;
+              position: absolute;
+              left: 100%;
+              top: 15px;
+            }
+            img{
+              height: 18px;
             }
             &:hover {
               background-color: #000;
@@ -494,15 +504,15 @@ header {
               transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
               width: 175px;
               border: 1px solid $black_10;
-              @include Flexible($a-items: center);
               padding: 0 20px;
               span {
-                width: 100%;
-                display: block;
                 line-height: normal;
                 margin-left: 10px;
                 padding-top: 5px;
                 transition: all 0.2s ease;
+                left: 35px;
+                visibility: visible;
+                opacity: 1;
               }
               img {
                 width: fit-content;
@@ -673,41 +683,38 @@ header {
       }
     }
   }
+  &.add-bg {
+    background-color: #fff;
+  }
   &.fix-head {
     .header-top {
       height: 0;
-    overflow: hidden;
+      overflow: hidden;
     }
     .header-bottom {
-      background-color: #fff;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
       .header-main {
         .right-side {
           a {
             &.internet-bank {
-              padding: 14px 5px 14px 6px;
               width: 45px;
               height: 45px;
-              display: block;
               span {
-                transition: none;
-                display: none;
-                color: #000;
+                visibility: hidden;
+                opacity: 0;
               }
-              @media (min-width:992px) {
-                padding: 16.5px 5px 17.5px 6px;
+              @media (min-width: 992px) {
                 width: 55px;
                 height: 55px;
-                img{
-                  width: 100%;
-                  height: 20px;
+                img {
+                  height: 18px;
                 }
               }
             }
           }
         }
       }
-      .header-additions{
+      .header-additions {
         &.show {
           max-height: calc(100vh - 60px);
           @media (min-width: 992px) {
