--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -577,6 +577,13 @@ header .header-bottom .header-main .right-side a {
   border-radius: 50%;
   background-color: #FFC628;
 }
+header .header-bottom .header-main .right-side a:first-child {
+  display: flex;
+  align-items: center;
+}
+header .header-bottom .header-main .right-side a:first-child img {
+  height: 18px;
+}
 @media (min-width: 992px) {
   header .header-bottom .header-main .right-side a:first-child {
     display: none;
@@ -585,18 +592,25 @@ header .header-bottom .header-main .right-side a {
 header .header-bottom .header-main .right-side a:not(:last-child) {
   margin-right: 10px;
 }
-header .header-bottom .header-main .right-side a.message {
-  padding: 13.2px 4px 13.5px 4px;
-}
 header .header-bottom .header-main .right-side a.internet-bank {
-  padding: 14px 5px 14px 6px;
   transition: none;
   line-height: normal;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 header .header-bottom .header-main .right-side a.internet-bank span {
-  transition: none;
-  display: none;
+  opacity: 0;
+  visibility: visible;
+  display: inline-block;
   color: #000;
+  position: absolute;
+  left: 100%;
+  top: 15px;
+}
+header .header-bottom .header-main .right-side a.internet-bank img {
+  height: 18px;
 }
 header .header-bottom .header-main .right-side a.internet-bank:hover {
   background-color: #000;
@@ -655,17 +669,16 @@ header .header-bottom .header-main .right-side a.menu-toggle.open-adds .line:nth
     transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
     width: 175px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
     padding: 0 20px;
   }
   header .header-bottom .header-main .right-side a.internet-bank span {
-    width: 100%;
-    display: block;
     line-height: normal;
     margin-left: 10px;
     padding-top: 5px;
     transition: all 0.2s ease;
+    left: 35px;
+    visibility: visible;
+    opacity: 1;
   }
   header .header-bottom .header-main .right-side a.internet-bank img {
     width: -moz-fit-content;
@@ -842,34 +855,31 @@ header .header-bottom .header-additions .wrapper .additions .contact {
     font-size: 16px;
   }
 }
+header.add-bg {
+  background-color: #fff;
+}
 header.fix-head .header-top {
   height: 0;
   overflow: hidden;
 }
 header.fix-head .header-bottom {
-  background-color: #fff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
 }
 header.fix-head .header-bottom .header-main .right-side a.internet-bank {
-  padding: 14px 5px 14px 6px;
   width: 45px;
   height: 45px;
-  display: block;
 }
 header.fix-head .header-bottom .header-main .right-side a.internet-bank span {
-  transition: none;
-  display: none;
-  color: #000;
+  visibility: hidden;
+  opacity: 0;
 }
 @media (min-width: 992px) {
   header.fix-head .header-bottom .header-main .right-side a.internet-bank {
-    padding: 16.5px 5px 17.5px 6px;
     width: 55px;
     height: 55px;
   }
   header.fix-head .header-bottom .header-main .right-side a.internet-bank img {
-    width: 100%;
-    height: 20px;
+    height: 18px;
   }
 }
 header.fix-head .header-bottom .header-additions.show {
