--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -1,6 +1,25 @@
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, 
-a, img, i, ol, ul, li,
-footer, header, nav, section, video {
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+img,
+i,
+ol,
+ul,
+li,
+footer,
+header,
+nav,
+section,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -8,7 +27,8 @@ footer, header, nav, section, video {
   box-sizing: border-box;
 }
 
-a,*,
+a,
+*,
 button,
 span,
 p,
@@ -28,51 +48,68 @@ h6 {
   transition: all 0.3s ease;
 }
 
-button,input{
-    appearance: none;
-    border: none;
-    background-color: transparent;
-    &:focus{
-      outline: none;
-    }
+button,
+input {
+  appearance: none;
+  border: none;
+  background-color: transparent;
+  &:focus {
+    outline: none;
+  }
 }
 
-button,input,select{
+button,
+input,
+select {
   font-family: "TT Commons Regular";
 }
 
-header, nav, section {
+header,
+nav,
+section {
   display: block;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-img{
+img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-body{
+body {
   font: 16px/1.6 "TT Commons Regular", Arial, sans-serif;
-  &.o-hidden{
-    overflow: hidden ;
-    .header-bottom{
+  &.o-hidden {
+    overflow: hidden;
+    .header-bottom {
       background-color: #fff;
     }
   }
 }
 
-.wrapper{
-    max-width: 1140px;
-    padding: 0 20px;
-    margin: 0 auto;
-    @include Flexible($j-cont:space-between,$a-items:center); 
+.wrapper {
+  max-width: 1140px;
+  padding: 0 20px;
+  margin: 0 auto;
+  @include Flexible($j-cont: space-between, $a-items: center);
 }
 
-
-
-
-
+.container {
+  max-width: 1140px;
+  padding: 0 15px;
+  margin: 0 auto;
+  @media (min-width:992px) {
+    padding: 0 20px;
+  }
+}
+.d-none{
+  display: none;
+}
+.b-red{
+  background-color: red;
+  margin-top: 50px;
+}
