--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import './common/common';
 @import './layouts/header';
 @import './layouts/footer';
+@import './layouts/modals';
 @import './pages/home';
 @import './pages/cardOrder';
 @import './pages/cards';
