--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -20,6 +20,14 @@
   font-weight: normal;
   font-style: normal;
 }
+@keyframes fillBar {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
 .entrance .swiper .swiper-slide .slide-content .content-inner a .curved-btn {
   margin: 20px 0;
   padding: 13px 20px;
@@ -66,7 +74,7 @@
   background-color: #fff;
 }
 
-.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details {
+.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details, .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details {
   margin: 20px 0;
   padding: 13px 0;
   font-family: "TT Commons Bold";
@@ -74,24 +82,42 @@
   display: flex;
   align-items: center;
 }
-.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details img {
+.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details img, .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details img {
   width: 20px;
   margin-left: 10px;
   -o-object-fit: contain;
      object-fit: contain;
 }
 @media (min-width: 992px) {
-  .entrance .swiper .swiper-slide .slide-content .content-inner a .more-details {
+  .entrance .swiper .swiper-slide .slide-content .content-inner a .more-details, .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details {
     font-size: 20px;
     padding: 14px 0;
     margin: 0;
   }
-  .entrance .swiper .swiper-slide .slide-content .content-inner a .more-details img {
+  .entrance .swiper .swiper-slide .slide-content .content-inner a .more-details img, .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details img {
     width: 35px;
   }
 }
-.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details:hover img {
+.entrance .swiper .swiper-slide .slide-content .content-inner a .more-details:hover img, .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details:hover img {
   margin-left: 20px;
+}
+
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .left-side .yelo-btn {
+  height: 55px;
+  border-radius: 10px;
+  color: #000;
+  font-family: "TT Commons Bold";
+  font-size: 18px;
+  text-align: center;
+  padding: 13px 25px;
+  display: inline-block;
+  background: #FFC628;
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .left-side .yelo-btn:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 html,
@@ -936,6 +962,234 @@ header.fix-head .header-bottom .header-additions.show {
   header.fix-head .header-bottom .header-additions.show {
     max-height: calc(100vh - 90px);
   }
+}
+
+.modals {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 9999999;
+  display: block;
+}
+.modals::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+.modals .modals-group {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.modals .modals-group .modal-item {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  display: none;
+  transition: all 0.3s cubic-bezier(0.52, 0.01, 0.16, 1);
+  opacity: 0;
+  top: 50px;
+  opacity: 1;
+  top: 0;
+  display: block;
+}
+.modals .modals-group .modal-item .modal-content {
+  position: relative;
+  max-width: 760px;
+  margin: 0 auto;
+}
+.modals .modals-group .modal-item .modal-content .swiper {
+  width: 100%;
+  height: 480px;
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  z-index: 2;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide {
+  width: 100%;
+  height: 480px;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content.bg-green {
+  background-color: #81BD5B;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content.bg-blue {
+  background-color: #0071c7;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content.bg-red {
+  background-color: #d82a34;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+  width: 50%;
+  height: 100%;
+  padding: 0 20px 0 60px;
+  color: #fff;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b {
+  font-size: 27px;
+  font-family: "TT Commons Medium";
+  font-weight: normal;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b p {
+  font-size: 19px;
+  line-height: 22px;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .left-side {
+  width: 100%;
+  padding-bottom: 30px;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side {
+  width: 100%;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a {
+  display: inline-block;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details {
+  color: #fff;
+  padding: 5px 0;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details img {
+  filter: brightness(0) invert(1);
+}
+@media (min-width: 992px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details {
+    font-size: 16px;
+    padding: 5px 0;
+    margin: 0;
+  }
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details img {
+    width: 30px;
+  }
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details:hover img {
+  margin-left: 20px;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img {
+  width: 50%;
+  display: flex;
+  align-items: flex-end;
+}
+.modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: auto;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .modal-close {
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  right: -70px;
+  top: 0px;
+  background: no-repeat center;
+  display: block;
+  z-index: 4;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-next {
+  right: -55px;
+  width: 40px;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-next::after {
+  content: "";
+  width: 33px;
+  height: 22px;
+  background: url("../../public/images/next_story.svg") no-repeat center/contain;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-prev {
+  left: -55px;
+  width: 40px;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-prev::after {
+  content: "";
+  width: 33px;
+  height: 22px;
+  background: url("../../public/images/prev_story.svg") no-repeat center/contain;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination {
+  position: absolute;
+  top: 100%;
+  text-align: center;
+  width: 100%;
+  padding: 15px 0 0 0;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination span {
+  width: 50px;
+  height: 50px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 100%;
+  opacity: 1;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination span:first-child {
+  background-color: #81BD5B;
+  background-image: url("../../public/images/yelo-kart-500x500_1.webp");
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination span:nth-child(2) {
+  background-color: #0071c7;
+  background-image: url("../../public/images/kredit-banner-500x500.webp");
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination span:last-child {
+  background-color: #d82a34;
+  background-image: url("../../public/images/taksit-karti-500x500.webp");
+}
+.modals .modals-group .modal-item .modal-content .stories-progress {
+  position: absolute;
+  top: 25px;
+  left: 0px;
+  z-index: 5;
+  width: 100%;
+}
+.modals .modals-group .modal-item .modal-content .stories-progress ul {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 15px;
+}
+.modals .modals-group .modal-item .modal-content .stories-progress ul li {
+  width: 100%;
+  padding: 0 10px;
+}
+.modals .modals-group .modal-item .modal-content .stories-progress ul li .bar {
+  height: 4px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  overflow: hidden;
+}
+.modals .modals-group .modal-item .modal-content .stories-progress ul li .bar .holder {
+  width: 0%;
+  height: 100%;
+  background: white;
+  border-radius: 10px;
 }
 
 .entrance {
