--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -971,6 +971,9 @@ header.fix-head .header-bottom .header-additions.show {
   top: 0px;
   left: 0px;
   z-index: 9999999;
+  display: none;
+}
+.modals.active {
   display: block;
 }
 .modals::after {
@@ -994,18 +997,30 @@ header.fix-head .header-bottom .header-additions.show {
   position: relative;
   z-index: 2;
   width: 100%;
-  display: none;
   transition: all 0.3s cubic-bezier(0.52, 0.01, 0.16, 1);
   opacity: 0;
   top: 50px;
+  display: block;
+  padding: 0 15px;
+}
+.modals .modals-group .modal-item.show {
   opacity: 1;
   top: 0;
-  display: block;
+}
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item {
+    padding: 0;
+  }
 }
 .modals .modals-group .modal-item .modal-content {
   position: relative;
   max-width: 760px;
-  margin: 0 auto;
+  margin: -55px auto 0;
+}
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content {
+    margin: 0 auto;
+  }
 }
 .modals .modals-group .modal-item .modal-content .swiper {
   width: 100%;
@@ -1023,7 +1038,17 @@ header.fix-head .header-bottom .header-additions.show {
   width: 100%;
   height: 100%;
   position: relative;
+  display: block;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: normal;
+  }
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content.bg-green {
   background-color: #81BD5B;
@@ -1037,37 +1062,52 @@ header.fix-head .header-bottom .header-additions.show {
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text {
   position: relative;
   z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  align-content: stretch;
-  width: 50%;
-  height: 100%;
-  padding: 0 20px 0 60px;
+  width: 100%;
+  padding: 50px 20px 0;
   color: #fff;
 }
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    width: 50%;
+    height: 100%;
+    padding: 0 20px 0 60px;
+  }
+}
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b {
-  font-size: 27px;
+  font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 15px;
   font-family: "TT Commons Medium";
   font-weight: normal;
-  line-height: 1.3;
-  margin-bottom: 20px;
+  display: block;
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b p {
-  font-size: 19px;
-  line-height: 22px;
+  font-size: 16px;
+  line-height: 20px;
+}
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b {
+    font-size: 27px;
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text b p {
+    font-size: 19px;
+    line-height: 22px;
+  }
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action {
+  padding: 15px 0px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  align-content: stretch;
+  justify-content: flex-start;
+  align-items: center;
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .left-side {
   width: 100%;
-  padding-bottom: 30px;
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side {
   width: 100%;
@@ -1078,6 +1118,7 @@ header.fix-head .header-bottom .header-additions.show {
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details {
   color: #fff;
   padding: 5px 0;
+  margin: 0;
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details img {
   filter: brightness(0) invert(1);
@@ -1095,45 +1136,86 @@ header.fix-head .header-bottom .header-additions.show {
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .right-side a .more-details:hover img {
   margin-left: 20px;
 }
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    padding: 0;
+  }
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .text .action .left-side {
+    padding-bottom: 30px;
+  }
+}
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img {
-  width: 50%;
-  display: flex;
-  align-items: flex-end;
+  width: 100%;
+  height: 220px;
 }
 .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img img {
   -o-object-fit: contain;
      object-fit: contain;
-  height: auto;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+  }
+  .modals .modals-group .modal-item .modal-content .swiper .swiper-slide .slide-content .bg-img img {
+    height: auto;
+  }
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .modal-close {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 40px;
   position: absolute;
-  right: -70px;
-  top: 0px;
-  background: no-repeat center;
+  right: 0px;
+  top: 8px;
   display: block;
   z-index: 4;
+  background: no-repeat center;
+  background-size: 16px;
+  cursor: pointer;
+  transition: none;
+}
+@media (min-width: 992px) {
+  .modals .modals-group .modal-item .modal-content .stories-nav .modal-close {
+    width: 70px;
+    height: 70px;
+    right: -70px;
+    top: 0px;
+    background-size: auto;
+  }
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button {
+  width: 40px;
+  display: none;
+}
+.modals .modals-group .modal-item .modal-content .stories-nav .swiper-button::after {
+  content: "";
+  width: 33px;
+  height: 22px;
+  background: no-repeat center/contain;
+}
+@media (min-width: 992px) {
+  .modals .modals-group .modal-item .modal-content .stories-nav .swiper-button {
+    display: flex;
+  }
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-next {
   right: -55px;
-  width: 40px;
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-next::after {
-  content: "";
-  width: 33px;
-  height: 22px;
-  background: url("../../public/images/next_story.svg") no-repeat center/contain;
+  background-image: url("../../public/images/next_story.svg");
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-prev {
   left: -55px;
-  width: 40px;
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .swiper-button-prev::after {
-  content: "";
-  width: 33px;
-  height: 22px;
-  background: url("../../public/images/prev_story.svg") no-repeat center/contain;
+  background-image: url("../../public/images/prev_story.svg");
 }
 .modals .modals-group .modal-item .modal-content .stories-nav .swiper-stories-pagination {
   position: absolute;
@@ -1172,7 +1254,12 @@ header.fix-head .header-bottom .header-additions.show {
 .modals .modals-group .modal-item .modal-content .stories-progress ul {
   display: flex;
   justify-content: space-around;
-  padding: 0 15px;
+  padding: 0 50px 0 10px;
+}
+@media (min-width: 992px) {
+  .modals .modals-group .modal-item .modal-content .stories-progress ul {
+    padding: 0 15px;
+  }
 }
 .modals .modals-group .modal-item .modal-content .stories-progress ul li {
   width: 100%;
@@ -1181,7 +1268,7 @@ header.fix-head .header-bottom .header-additions.show {
 .modals .modals-group .modal-item .modal-content .stories-progress ul li .bar {
   height: 4px;
   width: 100%;
-  background: rgba(53, 18, 18, 0.3);
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   overflow: hidden;
 }
