--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -1,6 +1,8 @@
 @font-face {
   font-family: "TT Commons Medium";
   src: url("../fonts/subset-TTCommons-Medium.woff2");
+  font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
