--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -136,6 +136,8 @@
 .stroies-section {
   .title {
     font-family: "TT Commons Bold";
+    @include Flexible($a-items: center);
+    margin-bottom: 5px;
     b {
       padding: 7px 0;
       font-size: 20px;
@@ -161,7 +163,7 @@
         text-align: center;
         font-size: 18px;
         line-height: 36px;
-        margin: 0 0 0 8px;
+        margin-left: 8px;
         vertical-align: baseline;
       }
     }
@@ -179,12 +181,12 @@
         overflow: hidden;
         display: block;
         position: relative;
-        @media (min-width:992px) {
-            width: 346.5px !important;
-            margin-left: 20px;
-            &:not(:last-child){
-                margin-right: 10px;
-            }
+        @media (min-width: 992px) {
+          width: 346.5px !important;
+          margin-left: 20px;
+          &:not(:last-child) {
+            margin-right: 10px;
+          }
         }
         &:first-child {
           background-color: $green_color;
@@ -205,6 +207,7 @@
           }
         }
         a {
+          display: block;
           .story-desc {
             max-width: 140px;
             position: absolute;
@@ -237,8 +240,8 @@
               text-overflow: ellipsis;
               font-weight: normal;
             }
-            @media (min-width:992px) {
-                max-width: 180px;
+            @media (min-width: 992px) {
+              max-width: 180px;
             }
           }
           .story-image {
@@ -247,6 +250,52 @@
             height: 140px;
           }
         }
+      }
+    }
+  }
+}
+.loan-calculator {
+  margin-bottom: 30px;
+  .col {
+    &:first-child {
+      margin-bottom: 15px;
+    }
+    .card {
+      border-radius: 10px;
+      border: 1px solid #ececec;
+      height: 100%;
+      overflow: hidden;
+      background: $socials_bg_color;
+      perspective: 2000px;
+      position: relative;
+      .card-img{
+        right: 40px;
+        box-shadow: 50px 60px 80px rgba(0,0,0,0.2);
+        transition: all 0.4s cubic-bezier(.52, .01, .16, 1);
+        position: absolute;
+        top: 20px;
+        border-radius: 10px;
+        transform: matrix3d(0.858606, 0.298387, 0, -0.000414946, -0.651602, 0.939378, 0, -4.94499e-05, 0, 0, 1, 0, 216, -3, 0, 1);
+        transform-origin: center;
+        width: 130px;
+        height: 210px;
+        left: -47%;
+      }
+      .card-desc{
+        padding: 240px 20px 20px;
+      }
+    }
+  }
+
+  @media (min-width: 992px) {
+    margin-bottom: 50px;
+    .row {
+      @include Flexible();
+      margin: 0 -15px;
+      .col {
+        width: 50%;
+        margin: 0;
+        padding: 0 15px;
       }
     }
   }
